[gd_scene format=4 uid="uid://dr64t2hjb08oy"]

[ext_resource type="Script" uid="uid://swrn2d64qvmd" path="res://Level/level.gd" id="1_0b4ue"]
[ext_resource type="Texture2D" uid="uid://dh4s6l6pb67fo" path="res://Level/tilemap-Sheet.svg" id="1_oi3di"]
[ext_resource type="PackedScene" uid="uid://bkq7kycdcrqxm" path="res://Player/player.tscn" id="3_0b4ue"]
[ext_resource type="PackedScene" uid="uid://eojqh7r1p2te" path="res://Checkpoint/checkpoint.tscn" id="4_0b4ue"]
[ext_resource type="PackedScene" uid="uid://cpjglweyyhegc" path="res://Block/block.tscn" id="5_f2txt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0b4ue"]
texture = ExtResource("1_oi3di")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
5:1/0 = 0
4:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
6:3/0 = 0
7:3/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_f2txt"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0b4ue")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b4ue"]
size = Vector2(362, 202)

[node name="level" type="Node2D" unique_id=170661356]
script = ExtResource("1_0b4ue")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1853726450]
tile_map_data = PackedByteArray("AAACAPv/AAAHAAIAAAABAPv/AAAHAAIAAAAAAPv/AAAHAAIAAAD///v/AAAHAAIAAAD+//z/AAAHAAIAAAD9//z/AAAHAAIAAAD8//z/AAAHAAIAAAD7//3/AAAHAAIAAAD6//3/AAAGAAIAAAD6//7/AAAGAAIAAAD6////AAAHAAIAAAD6/wAAAAAHAAIAAAD6/wEAAAAHAAIAAAD6/wIAAAAHAAIAAAD6/wMAAAAGAAIAAAD7/wMAAAAHAAIAAAD8/wQAAAAHAAIAAAD9/wQAAAAHAAIAAAD+/wQAAAAGAAIAAAD//wQAAAAGAAIAAAAAAAMAAAAHAAIAAAABAAMAAAAHAAIAAAACAAMAAAAGAAIAAAADAAMAAAAGAAIAAAADAAIAAAAHAAIAAAAEAAIAAAAHAAIAAAAEAAEAAAAHAAIAAAAEAAAAAAAHAAIAAAAEAP//AAAHAAIAAAAEAP7/AAAHAAIAAAAEAP3/AAAGAAIAAAADAP3/AAAHAAIAAAADAPz/AAAHAAIAAAADAPv/AAAGAAIAAAABAPr/AAAHAAIAAAAAAPr/AAAHAAIAAAD///r/AAAGAAIAAAD+//r/AAAGAAIAAAD+//v/AAAHAAIAAAD9//v/AAAGAAIAAAD8//v/AAAGAAIAAAD7//z/AAAGAAIAAAD7//7/AAAHAAIAAAD7////AAAHAAIAAAD8//7/AAAHAAIAAAD8//3/AAAHAAIAAAD9//3/AAAHAAIAAAAAAPz/AAAHAAIAAAD///z/AAAHAAIAAAD7/wAAAAAHAAIAAAD7/wEAAAAHAAIAAAD7/wIAAAAHAAIAAAD8/wIAAAAHAAIAAAD8/wMAAAAHAAIAAAD9/wMAAAAHAAIAAAD+/wMAAAAHAAIAAAD//wMAAAAHAAIAAAAAAAIAAAAHAAIAAAABAAIAAAAHAAIAAAACAAIAAAAHAAIAAAACAAEAAAAHAAIAAAADAAEAAAAHAAIAAAADAAAAAAAHAAIAAAADAP//AAAHAAIAAAADAP7/AAAHAAIAAAACAP7/AAAHAAIAAAACAP3/AAAHAAIAAAABAP3/AAAHAAIAAAABAPz/AAAHAAIAAAD///3/AAAHAAIAAAD+//3/AAAHAAIAAAD+//7/AAAHAAIAAAD9//7/AAAHAAIAAAD9////AAAHAAIAAAD+////AAAHAAIAAAD/////AAAHAAIAAAAAAP7/AAAHAAIAAAAAAP3/AAAHAAIAAAACAPz/AAAHAAIAAAACAP//AAAHAAIAAAACAAAAAAAHAAIAAAABAAAAAAAHAAIAAAABAAEAAAAHAAIAAAAAAAEAAAAHAAIAAAD//wIAAAAHAAIAAAD+/wIAAAAHAAIAAAD9/wIAAAAHAAIAAAD9/wEAAAAHAAIAAAD8/wEAAAAHAAIAAAD8/wAAAAAHAAIAAAD8////AAAHAAIAAAAAAP//AAAHAAIAAAAAAAAAAAAHAAIAAAD//wAAAAAHAAIAAAD+/wAAAAAHAAIAAAD9/wAAAAAHAAIAAAD+/wEAAAAHAAIAAAD//wEAAAAHAAIAAAABAP//AAAHAAIAAAABAP7/AAAHAAIAAAD///7/AAAHAAIAAAAFAAIAAAAGAAIAAAAFAAEAAAAGAAIAAAAFAAAAAAAGAAIAAAAEAPz/AAAGAAIAAAACAPr/AAAGAAIAAAD5////AAAGAAIAAAD5/wAAAAAGAAIAAAD5/wEAAAAGAAIAAAD5/wIAAAAGAAIAAAD7/wQAAAAGAAIAAAD8/wUAAAAGAAIAAAD9/wUAAAAGAAIAAAD+/wUAAAAFAAIAAAD//wUAAAAFAAIAAAAAAAQAAAAFAAIAAAABAAQAAAAFAAIAAAACAAQAAAAFAAIAAAAEAAMAAAAFAAIAAAAGAAIAAAAFAAIAAAAGAAEAAAAFAAIAAAAFAP//AAAFAAIAAAAFAP7/AAAFAAIAAAAEAPv/AAAFAAIAAAADAPr/AAAFAAIAAAACAPn/AAAFAAIAAAABAPn/AAAFAAIAAAAAAPn/AAAFAAIAAAD///n/AAAFAAIAAAD9//r/AAAFAAIAAAD7//v/AAAFAAIAAAD6//z/AAAFAAIAAAD5//7/AAAFAAIAAAD4/wAAAAAFAAIAAAD4/wEAAAAFAAIAAAD5/wMAAAAFAAIAAAD6/wQAAAAFAAIAAAD7/wUAAAAFAAIAAAD9/wYAAAAFAAIAAAD8/wYAAAAFAAIAAAD+/wYAAAAEAAIAAAD//wYAAAAEAAIAAAAAAAUAAAAEAAIAAAABAAUAAAAEAAIAAAADAAQAAAAEAAIAAAAFAAMAAAAEAAIAAAAHAAIAAAAEAAIAAAAHAAEAAAAEAAIAAAAGAAAAAAAEAAIAAAAGAP//AAAEAAIAAAAGAP7/AAAEAAIAAAAFAP3/AAAEAAIAAAAFAPz/AAAEAAIAAAAEAPr/AAAEAAIAAAADAPn/AAAEAAIAAAACAPj/AAAEAAIAAAABAPj/AAAEAAIAAAAAAPj/AAAEAAIAAAD+//n/AAAEAAIAAAD8//r/AAAEAAIAAAD6//v/AAAEAAIAAAD5//z/AAAEAAIAAAD5//3/AAAEAAIAAAD4//7/AAAEAAIAAAD4////AAAEAAIAAAD3/wAAAAAEAAIAAAD3/wEAAAAEAAIAAAD4/wIAAAAEAAIAAAD4/wMAAAAEAAIAAAD5/wQAAAAEAAIAAAD6/wUAAAAEAAIAAAD7/wYAAAAEAAIAAAD8/wcAAAAEAAIAAAD9/wcAAAADAAIAAAD+/wcAAAADAAIAAAD//wcAAAADAAIAAAAAAAYAAAADAAIAAAABAAYAAAADAAIAAAACAAUAAAADAAIAAAADAAUAAAADAAIAAAAEAAQAAAADAAIAAAAFAAQAAAADAAIAAAAGAAMAAAADAAIAAAAHAAMAAAADAAIAAAAIAAIAAAADAAIAAAAIAAEAAAADAAIAAAAHAAAAAAADAAIAAAAHAP//AAADAAIAAAAHAP7/AAADAAIAAAAGAP3/AAADAAIAAAAGAPz/AAADAAIAAAAFAPr/AAADAAIAAAAFAPn/AAADAAIAAAAFAPv/AAADAAIAAAAEAPn/AAADAAIAAAADAPj/AAADAAIAAAAEAPj/AAADAAIAAAACAPf/AAACAAIAAAABAPf/AAADAAIAAAAAAPf/AAADAAIAAAD///j/AAADAAIAAAD+//j/AAADAAIAAAD9//n/AAADAAIAAAD8//n/AAADAAIAAAD7//r/AAADAAIAAAD6//r/AAACAAIAAAD5//v/AAADAAIAAAD4//z/AAADAAIAAAD4//3/AAADAAIAAAD3//7/AAADAAIAAAD3////AAADAAIAAAD2/wAAAAADAAIAAAD2/wEAAAADAAIAAAD3/wIAAAADAAIAAAD3/wMAAAADAAIAAAD4/wQAAAADAAIAAAD5/wUAAAADAAIAAAD6/wYAAAADAAIAAAD7/wcAAAADAAIAAAD8/wgAAAADAAIAAAD9/wgAAAADAAIAAAD8/wkAAAABAAIAAAD9/wkAAAACAAIAAAD//wgAAAACAAIAAAD+/wgAAAACAAIAAAAAAAcAAAACAAIAAAABAAcAAAACAAIAAAACAAYAAAACAAIAAAADAAYAAAACAAIAAAAEAAUAAAACAAIAAAAFAAUAAAACAAIAAAAGAAQAAAACAAIAAAAHAAQAAAABAAIAAAAIAAMAAAACAAIAAAAJAAIAAAACAAIAAAAJAAEAAAACAAIAAAAIAAAAAAACAAIAAAAIAP//AAACAAIAAAAIAP7/AAACAAIAAAAHAPz/AAACAAIAAAAHAP3/AAACAAIAAAAGAPv/AAACAAIAAAAGAPr/AAABAAIAAAAFAPj/AAABAAIAAAAEAPf/AAACAAIAAAADAPf/AAACAAIAAAACAPb/AAACAAIAAAABAPb/AAACAAIAAAAAAPb/AAACAAIAAAD///b/AAACAAIAAAD///f/AAACAAIAAAD+//f/AAACAAIAAAD9//f/AAACAAIAAAD9//j/AAACAAIAAAD8//j/AAACAAIAAAD7//j/AAACAAIAAAD7//n/AAACAAIAAAD6//n/AAACAAIAAAD5//r/AAACAAIAAAD4//r/AAACAAIAAAD4//v/AAACAAIAAAD3//v/AAACAAIAAAD3//z/AAACAAIAAAD3//3/AAACAAIAAAD2//3/AAACAAIAAAD2//7/AAACAAIAAAD2////AAACAAIAAAD1////AAACAAIAAAD1/wAAAAACAAIAAAD1/wEAAAABAAIAAAD2/wIAAAACAAIAAAD2/wMAAAABAAIAAAD3/wQAAAABAAIAAAD4/wUAAAACAAIAAAD5/wYAAAACAAIAAAD5/wcAAAABAAIAAAD6/wcAAAACAAIAAAD7/wgAAAACAAIAAAD0/wEAAAABAAIAAAD1/wIAAAABAAIAAAD1/wMAAAABAAIAAAD2/wQAAAABAAIAAAD3/wUAAAABAAIAAAD3/wYAAAABAAIAAAD4/wYAAAABAAIAAAD4/wcAAAAAAAIAAAD5/wgAAAAAAAIAAAD6/wgAAAABAAIAAAD6/wkAAAABAAIAAAD7/wkAAAABAAIAAAD8/woAAAABAAIAAAD9/woAAAABAAIAAAD+/woAAAABAAIAAAD+/wkAAAABAAIAAAD//wkAAAABAAIAAAAAAAkAAAABAAIAAAAAAAgAAAABAAIAAAABAAgAAAABAAIAAAACAAgAAAABAAIAAAACAAcAAAABAAIAAAADAAcAAAABAAIAAAAEAAcAAAABAAIAAAAEAAYAAAABAAIAAAAFAAYAAAABAAIAAAAGAAYAAAAAAAIAAAAGAAUAAAABAAIAAAAHAAUAAAABAAIAAAAIAAQAAAABAAIAAAAJAAQAAAABAAIAAAAJAAMAAAABAAIAAAAKAAMAAAABAAIAAAAKAAIAAAABAAIAAAAKAAEAAAABAAIAAAAKAAAAAAABAAIAAAAKAP//AAABAAIAAAAJAP//AAABAAIAAAAJAAAAAAABAAIAAAAIAP3/AAABAAIAAAAIAPz/AAABAAIAAAAIAPv/AAABAAIAAAAHAPv/AAABAAIAAAAHAPr/AAABAAIAAAAGAPn/AAABAAIAAAAGAPj/AAABAAIAAAAFAPf/AAABAAIAAAAFAPb/AAAAAAIAAAAEAPb/AAABAAIAAAADAPb/AAABAAIAAAADAPX/AAABAAIAAAACAPX/AAABAAIAAAABAPX/AAABAAIAAAAAAPX/AAABAAIAAAD///X/AAABAAIAAAD+//X/AAABAAIAAAD9//X/AAABAAIAAAD9//b/AAABAAIAAAD8//b/AAABAAIAAAD+//b/AAABAAIAAAD8//f/AAABAAIAAAD7//f/AAABAAIAAAD6//f/AAABAAIAAAD6//j/AAABAAIAAAD5//j/AAABAAIAAAD5//n/AAABAAIAAAD4//n/AAABAAIAAAD3//n/AAABAAIAAAD3//r/AAABAAIAAAD2//r/AAABAAIAAAD2//v/AAABAAIAAAD1//v/AAAAAAIAAAD1//z/AAABAAIAAAD1//3/AAABAAIAAAD1//7/AAABAAIAAAD0//7/AAAAAAIAAAD0////AAABAAIAAAD0/wAAAAABAAIAAAD2//z/AAABAAIAAAD8/wsAAAAAAAIAAAD9/wsAAAAAAAIAAAD+/wsAAAAAAAIAAAD//wsAAAAAAAIAAAD//woAAAAAAAIAAAAAAAoAAAAAAAIAAAABAAoAAAAAAAIAAAABAAkAAAAAAAIAAAACAAkAAAAAAAIAAAADAAgAAAAAAAIAAAAEAAgAAAAAAAIAAAAFAAcAAAAAAAIAAAAHAAYAAAAAAAIAAAAIAAUAAAAAAAIAAAAJAAUAAAAAAAIAAAAKAAQAAAAAAAIAAAALAAMAAAAAAAIAAAALAAIAAAAAAAIAAAALAAEAAAAAAAIAAAALAAAAAAAAAAIAAAALAP//AAAAAAIAAAAKAP7/AAAAAAIAAAAJAP3/AAAAAAIAAAAJAPz/AAAAAAIAAAAJAP7/AAABAAIAAAD7/woAAAAAAAIAAAD6/woAAAAAAAIAAAD5/wkAAAAAAAIAAAD3/wcAAAAAAAIAAAD2/wYAAAAAAAIAAAD0/wMAAAAAAAIAAAD0/wIAAAAAAAIAAADz/wEAAAAAAAIAAAD2/wUAAAAAAAIAAAD1/wQAAAAAAAIAAADz/wAAAAAAAAIAAADz////AAAAAAIAAAD0//3/AAAAAAIAAAD0//z/AAAAAAIAAAD1//r/AAAAAAIAAAD2//n/AAAAAAIAAAD3//j/AAAAAAIAAAD5//f/AAAAAAIAAAD4//j/AAAAAAIAAAD6//b/AAAAAAIAAAD7//b/AAAAAAIAAAD8//X/AAAAAAIAAAD9//T/AAAAAAIAAAD+//T/AAAAAAIAAAD///T/AAAAAAIAAAAAAPT/AAAAAAIAAAABAPT/AAAAAAIAAAACAPT/AAAAAAIAAAADAPT/AAAAAAIAAAAEAPX/AAAAAAIAAAAGAPf/AAAAAAIAAAAHAPj/AAAAAAIAAAAHAPn/AAAAAAIAAAAIAPr/AAAAAAIAAAAJAPv/AAAAAAIAAAAWAAUAAAAEAAAAAAAWAAQAAAACAAAAAAAWAAYAAAAEAAAAAAAAAAwAAAAAAAEAAAABAAwAAAAAAAEAAAACAAwAAAAAAAEAAAADAAwAAAAAAAEAAAAEAAwAAAAAAAEAAAAFAAwAAAAAAAEAAAAGAAwAAAAAAAEAAAAHAAwAAAAAAAEAAAAIAAwAAAAAAAEAAAAJAAwAAAADAAAAAAAKAAwAAAAHAAAAAAALAAwAAAADAAAAAAAMAAwAAAAFAAAAAAANAAwAAAADAAAAAAAOAAwAAAADAAAAAAAPAAwAAAAAAAAAAAAQAAwAAAAEAAAAAAARAAwAAAACAAAAAAASAAwAAAACAAAAAAATAAwAAAAHAAAAAAAUAAwAAAAHAAAAAAAVAAwAAAACAAAAAAAWAAwAAAADAAAAAAAWAAsAAAAFAAAAAAAWAAoAAAADAAAAAAAWAAkAAAACAAAAAAAWAAgAAAAEAAAAAAAWAAcAAAADAAAAAAD//wwAAAAAAAEAAAD+/wwAAAAAAAEAAAD9/wwAAAAAAAEAAAD8/wwAAAAAAAEAAAD7/wwAAAAAAAEAAAD6/wwAAAAAAAEAAAD5/wwAAAAAAAEAAAD4/wwAAAAEAAAAAAD3/wwAAAAFAAAAAAD2/wwAAAACAAAAAAD1/wwAAAAGAAAAAAD0/wwAAAAGAAAAAADz/wwAAAAFAAAAAADy/wwAAAACAAAAAADx/wwAAAADAAAAAADw/wwAAAAFAAAAAADv/wwAAAAGAAAAAADu/wwAAAAAAAAAAADt/wwAAAACAAAAAADs/wwAAAAEAAAAAADr/wwAAAAAAAAAAADq/wwAAAAEAAAAAADp/wwAAAAHAAAAAADp/wsAAAACAAAAAADp/woAAAAFAAAAAADp/wkAAAAGAAAAAADp/wgAAAAHAAAAAADp/wcAAAAHAAAAAADp/wYAAAAHAAAAAADp/wUAAAAHAAAAAADp/wQAAAAHAAAAAADp/wMAAAABAAAAAADp/wIAAAAEAAAAAADp/wEAAAAAAAEAAADp/wAAAAAAAAEAAADp////AAAAAAEAAAAWAAMAAAAGAAAAAAAWAAIAAAADAAAAAAAWAAEAAAAAAAEAAAAWAAAAAAAAAAEAAAAWAP//AAAAAAEAAAAWAP7/AAAAAAEAAAAWAP3/AAAFAAAAAAAWAPz/AAAEAAAAAAAWAPv/AAACAAAAAAAWAPr/AAAEAAAAAAAWAPn/AAADAAAAAAAWAPj/AAACAAAAAAAWAPf/AAABAAAAAAAWAPb/AAACAAAAAAAWAPX/AAABAAAAAAAWAPT/AAAHAAAAAAAWAPP/AAAEAAAAAAAVAPP/AAACAAAAAAAUAPP/AAADAAAAAAATAPP/AAAEAAAAAAASAPP/AAADAAAAAAARAPP/AAAAAAAAAAAQAPP/AAADAAAAAAAPAPP/AAABAAAAAAAOAPP/AAAGAAAAAAANAPP/AAAAAAAAAAAMAPP/AAADAAAAAAALAPP/AAAAAAEAAAAKAPP/AAAAAAEAAAAJAPP/AAAAAAEAAAAIAPP/AAAAAAEAAAAHAPP/AAAAAAEAAAAGAPP/AAAAAAEAAAAFAPP/AAAAAAEAAAAEAPP/AAAAAAEAAAADAPP/AAAAAAEAAAACAPP/AAAAAAEAAAABAPP/AAAAAAEAAAAAAPP/AAAAAAEAAAD///P/AAAAAAEAAAD+//P/AAAAAAEAAAD9//P/AAAAAAEAAAD8//P/AAAAAAEAAAD7//P/AAAAAAEAAAD6//P/AAAAAAEAAAD5//P/AAAAAAEAAAD4//P/AAAAAAEAAAD3//P/AAAAAAEAAAD2//P/AAAAAAEAAAD1//P/AAAAAAEAAAD0//P/AAACAAAAAADz//P/AAAEAAAAAADy//P/AAABAAAAAADx//P/AAADAAAAAADw//P/AAAGAAAAAADv//P/AAACAAAAAADu//P/AAAHAAAAAADt//P/AAACAAAAAADs//P/AAAFAAAAAADr//P/AAACAAAAAADq//P/AAADAAAAAADp//P/AAAGAAAAAADp//T/AAAHAAAAAADp//X/AAAAAAAAAADp//b/AAAAAAAAAADp//f/AAACAAAAAADp//j/AAABAAAAAADp//n/AAAAAAAAAADp//r/AAAAAAAAAADp//v/AAAGAAAAAADp//z/AAAEAAAAAADp//3/AAAAAAEAAADp//7/AAAAAAEAAAACAPL/AAAFAAMAAAABAPL/AAAHAAMAAAAAAPL/AAAFAAMAAAD///L/AAAHAAMAAAD+//L/AAAGAAMAAAD+//H/AAAFAAMAAAD///H/AAACAAMAAAAAAPH/AAADAAMAAAABAPH/AAADAAMAAAACAPH/AAADAAMAAAD9//L/AAAAAAMAAAD9//H/AAAGAAMAAAAAAPD/AAAHAAMAAAD///D/AAAEAAMAAAABAPD/AAAHAAMAAAD+//D/AAADAAMAAAD//+//AAADAAMAAAAAAO//AAAGAAMAAAABAO//AAAGAAMAAAACAO//AAADAAMAAAADAO//AAADAAMAAAADAPD/AAACAAMAAAADAPH/AAAGAAMAAAD9//D/AAAFAAMAAAD9/+//AAAFAAMAAAD9/+7/AAAEAAMAAAD+/+7/AAAHAAMAAAD//+7/AAAHAAMAAAAAAO7/AAADAAMAAAABAO7/AAAGAAMAAAADAPL/AAACAAMAAAACAPD/AAABAAMAAAACAO7/AAAEAAMAAAADAO7/AAAEAAMAAAD+/+//AAAFAAMAAAAFAAsAAAAGAAEAAAAGAAsAAAAEAAEAAAAHAAsAAAADAAEAAAAIAAsAAAADAAEAAAAJAAsAAAACAAEAAAAKAAsAAAAHAAEAAAALAAsAAAACAAEAAAAMAAsAAAAEAAAAAAANAAsAAAACAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAHAAAAAAAQAAsAAAACAAAAAAARAAsAAAAHAAAAAAASAAsAAAAGAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAEAAAAAAAVAAsAAAADAAAAAAAVAAoAAAABAAAAAAAUAAoAAAAHAAAAAAATAAoAAAAEAAAAAAASAAoAAAAHAAAAAAARAAoAAAAEAAAAAAAQAAoAAAAGAAAAAAAPAAoAAAAFAAAAAAAOAAoAAAAFAAAAAAANAAoAAAAAAAEAAAAMAAoAAAAAAAEAAAALAAoAAAAFAAEAAAAKAAoAAAABAAEAAAAJAAoAAAAAAAEAAAAIAAoAAAAEAAEAAAAHAAoAAAAGAAEAAAAGAAoAAAAAAAEAAAAFAAoAAAACAAEAAAAEAAoAAAAHAAEAAAADAAoAAAAAAAEAAAACAAoAAAAFAAEAAAACAAsAAAAEAAEAAAABAAsAAAACAAEAAAAAAAsAAAADAAEAAAADAAsAAAAHAAEAAAAEAAsAAAAGAAEAAAADAAkAAAAEAAEAAAAEAAkAAAAGAAEAAAAFAAkAAAAFAAEAAAAGAAkAAAADAAEAAAAHAAkAAAAAAAEAAAAIAAkAAAADAAEAAAAJAAkAAAAAAAEAAAAKAAkAAAADAAEAAAALAAkAAAAFAAEAAAAMAAkAAAAGAAEAAAANAAkAAAAFAAEAAAAMAAYAAAAHAAEAAAAMAAUAAAAHAAEAAAAMAAQAAAAHAAEAAAAMAAMAAAACAAEAAAAMAAIAAAACAAEAAAAMAAEAAAADAAEAAAAMAAAAAAAGAAEAAAAMAP//AAADAAEAAAAMAP7/AAABAAEAAAAMAP3/AAAHAAEAAAAMAPz/AAADAAEAAAAMAPv/AAACAAEAAAAMAPr/AAABAAEAAAAMAPn/AAAGAAEAAAAMAPj/AAAFAAEAAAAMAPf/AAACAAEAAAAMAPb/AAABAAEAAAAMAPX/AAADAAEAAAAMAPT/AAAEAAEAAAALAPT/AAAGAAEAAAAKAPT/AAAHAAEAAAAJAPT/AAAFAAEAAAAIAPT/AAAHAAEAAAAHAPT/AAACAAEAAAAGAPT/AAAGAAEAAAAFAPT/AAAFAAEAAAAEAPT/AAAHAAEAAAAFAPX/AAABAAEAAAAGAPX/AAAFAAEAAAAGAPb/AAAAAAEAAAAHAPb/AAAAAAEAAAAHAPX/AAAFAAEAAAAIAPX/AAADAAEAAAAIAPb/AAAEAAEAAAAIAPf/AAAAAAEAAAAHAPf/AAACAAEAAAAIAPj/AAAEAAEAAAAIAPn/AAABAAEAAAAJAPn/AAAGAAEAAAAJAPj/AAACAAEAAAAJAPf/AAAFAAEAAAAJAPb/AAACAAEAAAAJAPX/AAAGAAEAAAAKAPX/AAAHAAEAAAAKAPb/AAAHAAEAAAAKAPf/AAAGAAEAAAAKAPj/AAAEAAEAAAAKAPn/AAAHAAEAAAAKAPr/AAABAAEAAAAJAPr/AAAEAAEAAAAKAPv/AAAFAAEAAAAKAPz/AAABAAEAAAAKAP3/AAAEAAEAAAALAP3/AAAGAAEAAAALAPz/AAAEAAEAAAALAPv/AAAHAAEAAAALAPr/AAAGAAEAAAALAPn/AAAAAAEAAAALAPj/AAADAAEAAAALAPf/AAAGAAEAAAALAPb/AAAGAAEAAAALAPX/AAAGAAEAAAALAP7/AAABAAEAAAANAPT/AAAAAAAAAAANAPX/AAADAAEAAAANAPb/AAABAAEAAAANAPf/AAADAAEAAAANAPj/AAAFAAEAAAANAPn/AAAFAAEAAAANAPr/AAAAAAEAAAANAPv/AAACAAEAAAANAPz/AAAGAAEAAAANAP3/AAAAAAEAAAANAP7/AAAHAAEAAAANAP//AAAEAAEAAAANAAAAAAAGAAEAAAANAAEAAAAHAAEAAAANAAIAAAADAAEAAAANAAMAAAAAAAEAAAANAAQAAAAFAAEAAAANAAUAAAAAAAEAAAANAAYAAAABAAEAAAANAAcAAAAAAAEAAAAMAAcAAAADAAEAAAALAAcAAAACAAEAAAALAAYAAAAAAAEAAAALAAUAAAACAAEAAAALAAQAAAADAAEAAAAKAAUAAAADAAEAAAAKAAYAAAACAAEAAAAJAAYAAAAHAAEAAAAIAAYAAAAEAAEAAAAIAAcAAAADAAEAAAAHAAcAAAAEAAEAAAAGAAcAAAAHAAEAAAAGAAgAAAAEAAEAAAAFAAgAAAAHAAEAAAAHAAgAAAAAAAEAAAAIAAgAAAACAAEAAAAJAAgAAAAFAAEAAAAJAAcAAAAAAAEAAAAKAAcAAAACAAEAAAAKAAgAAAAAAAEAAAALAAgAAAAFAAEAAAAMAAgAAAAGAAEAAAANAAgAAAABAAEAAAAOAAgAAAAEAAEAAAAOAAcAAAAGAAEAAAAOAAYAAAACAAEAAAAOAAUAAAAFAAEAAAAOAAQAAAAFAAEAAAAOAAMAAAAGAAEAAAAOAAIAAAADAAEAAAAOAAEAAAABAAEAAAAOAAAAAAAEAAEAAAAOAP//AAAGAAEAAAAOAP7/AAABAAEAAAAOAP3/AAABAAEAAAAOAPz/AAACAAEAAAAOAPv/AAACAAEAAAAOAPr/AAABAAEAAAAOAPn/AAAGAAEAAAAOAPj/AAAGAAEAAAAOAPf/AAABAAEAAAAOAPb/AAADAAEAAAAOAPX/AAAFAAEAAAAOAPT/AAAHAAAAAAAPAPT/AAAAAAAAAAAPAPX/AAACAAAAAAAPAPb/AAAAAAEAAAAPAPf/AAACAAEAAAAPAPj/AAADAAEAAAAPAPn/AAADAAEAAAAPAPr/AAAAAAEAAAAPAPv/AAADAAEAAAAPAPz/AAAFAAEAAAAPAP3/AAAHAAEAAAAPAP7/AAAGAAEAAAAPAP//AAACAAEAAAAPAAAAAAAHAAEAAAAPAAEAAAACAAEAAAAPAAIAAAACAAEAAAAPAAMAAAAGAAEAAAAPAAQAAAABAAEAAAAPAAUAAAAEAAEAAAAPAAYAAAABAAEAAAAPAAcAAAADAAEAAAAPAAgAAAAAAAEAAAAPAAkAAAAFAAEAAAAOAAkAAAAAAAEAAAAQAAkAAAAGAAAAAAAQAAgAAAAAAAEAAAAQAAcAAAADAAEAAAAQAAYAAAADAAEAAAAQAAUAAAACAAEAAAAQAAQAAAAGAAEAAAAQAAMAAAAAAAEAAAAQAAIAAAAHAAEAAAAQAAEAAAACAAEAAAAQAAAAAAAAAAEAAAAQAP//AAAHAAEAAAAQAP7/AAABAAEAAAAQAP3/AAAFAAEAAAAQAPz/AAAGAAEAAAAQAPv/AAAFAAEAAAAQAPr/AAADAAEAAAAQAPn/AAAGAAEAAAAQAPj/AAAAAAEAAAAQAPf/AAADAAEAAAAQAPb/AAAGAAAAAAAQAPX/AAABAAAAAAAQAPT/AAAFAAAAAAARAPT/AAAEAAAAAAARAPX/AAACAAAAAAARAPb/AAAGAAAAAAARAPf/AAAEAAEAAAARAPj/AAAFAAEAAAARAPn/AAADAAEAAAARAPr/AAACAAEAAAARAPv/AAABAAEAAAARAPz/AAAEAAEAAAARAP3/AAAHAAEAAAARAP7/AAACAAEAAAARAP//AAAGAAEAAAARAAAAAAAFAAEAAAARAAEAAAABAAEAAAARAAIAAAAEAAEAAAARAAMAAAAGAAEAAAARAAQAAAAFAAEAAAARAAUAAAAGAAEAAAARAAYAAAAGAAEAAAARAAcAAAAGAAEAAAARAAgAAAAAAAAAAAARAAkAAAAHAAAAAAASAAkAAAAEAAAAAAASAAgAAAAHAAAAAAASAAcAAAADAAEAAAASAAYAAAADAAEAAAASAAUAAAAAAAEAAAASAAQAAAACAAEAAAASAAMAAAAHAAEAAAASAAIAAAAGAAEAAAASAAEAAAAHAAEAAAASAAAAAAABAAEAAAASAP//AAABAAEAAAASAP7/AAABAAEAAAASAP3/AAADAAEAAAASAPz/AAAAAAEAAAASAPv/AAADAAEAAAASAPr/AAADAAEAAAASAPn/AAADAAEAAAASAPj/AAADAAEAAAASAPf/AAAEAAAAAAASAPb/AAAAAAAAAAASAPX/AAAHAAAAAAASAPT/AAAFAAAAAAATAPT/AAAEAAAAAAATAPX/AAABAAAAAAATAPb/AAAFAAAAAAATAPf/AAAGAAAAAAATAPj/AAAFAAAAAAATAPn/AAAFAAEAAAATAPr/AAADAAEAAAATAPv/AAABAAEAAAATAPz/AAAAAAEAAAATAP3/AAADAAEAAAATAP7/AAAHAAEAAAATAP//AAABAAEAAAATAAAAAAABAAEAAAATAAEAAAADAAEAAAATAAIAAAABAAEAAAATAAMAAAABAAEAAAATAAQAAAACAAEAAAATAAUAAAADAAEAAAATAAYAAAACAAEAAAATAAcAAAAEAAAAAAATAAgAAAADAAAAAAATAAkAAAAEAAAAAAAUAAkAAAAGAAAAAAAUAAgAAAABAAAAAAAUAAcAAAADAAAAAAAUAAYAAAAEAAAAAAAUAAUAAAABAAEAAAAUAAQAAAAFAAEAAAAUAAMAAAAHAAEAAAAUAAIAAAAAAAEAAAAUAAEAAAAFAAEAAAAUAAAAAAAAAAEAAAAUAP//AAACAAEAAAAUAP7/AAAHAAEAAAAUAP3/AAAFAAEAAAAUAPz/AAACAAEAAAAUAPv/AAAAAAEAAAAUAPr/AAAAAAAAAAAUAPn/AAAAAAAAAAAUAPj/AAABAAAAAAAUAPf/AAAHAAAAAAAUAPb/AAACAAAAAAAUAPX/AAACAAAAAAAUAPT/AAACAAAAAAAVAPT/AAACAAAAAAAVAPX/AAAHAAAAAAAVAPb/AAADAAAAAAAVAPf/AAACAAAAAAAVAPj/AAAFAAAAAAAVAPn/AAADAAAAAAAVAPr/AAAAAAAAAAAVAPv/AAACAAAAAAAVAPz/AAAGAAAAAAAVAP3/AAAFAAEAAAAVAP7/AAADAAEAAAAVAP//AAADAAEAAAAVAAAAAAAEAAEAAAAVAAEAAAAFAAEAAAAVAAIAAAACAAEAAAAVAAMAAAACAAEAAAAVAAQAAAAAAAEAAAAVAAUAAAAAAAAAAAAVAAYAAAADAAAAAAAVAAcAAAABAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAHAAAAAADy/wMAAAAEAAEAAADy/wIAAAAAAAEAAADy/wEAAAAAAAEAAADy/wAAAAAHAAEAAADy////AAAHAAEAAADy//7/AAAFAAEAAADy//3/AAAHAAEAAADy//z/AAAAAAEAAADy//v/AAADAAEAAADy//r/AAAFAAEAAADy//n/AAADAAEAAADy//j/AAAFAAEAAADy//f/AAADAAEAAADy//b/AAAEAAEAAADy//X/AAAAAAEAAADy//T/AAAHAAAAAADx//T/AAAAAAAAAADw//T/AAADAAAAAADv//T/AAAEAAAAAADu//T/AAAFAAAAAADt//T/AAAHAAAAAADs//T/AAAEAAAAAADr//T/AAADAAAAAADq//T/AAAEAAAAAADq//X/AAACAAAAAADq//b/AAAAAAAAAADq//f/AAABAAAAAADq//j/AAAFAAAAAADq//n/AAADAAAAAADq//r/AAABAAAAAADq//v/AAAFAAEAAADq//z/AAABAAEAAADq//3/AAAHAAEAAADq//7/AAACAAEAAADq////AAAGAAEAAADq/wAAAAAEAAEAAADq/wEAAAAGAAEAAADq/wIAAAAAAAEAAADq/wMAAAAAAAAAAADq/wQAAAAFAAAAAADq/wUAAAADAAAAAADq/wYAAAAHAAAAAADq/wcAAAAAAAAAAADq/wgAAAAGAAAAAADq/wkAAAADAAAAAADq/woAAAADAAAAAADq/wsAAAACAAAAAADr/wsAAAADAAAAAADr/woAAAABAAAAAADr/wkAAAADAAAAAADr/wgAAAADAAAAAADr/wcAAAAFAAAAAADr/wYAAAAAAAAAAADr/wUAAAADAAAAAADr/wQAAAABAAEAAADr/wMAAAAHAAEAAADr/wIAAAAEAAEAAADr/wEAAAAFAAEAAADr/wAAAAAHAAEAAADr////AAAHAAEAAADr//7/AAAHAAEAAADr//3/AAAAAAEAAADr//z/AAAEAAEAAADr//v/AAADAAEAAADr//r/AAABAAEAAADr//n/AAABAAEAAADr//j/AAAGAAAAAADr//f/AAACAAAAAADr//b/AAABAAAAAADr//X/AAACAAAAAADs//X/AAADAAAAAADs//b/AAAGAAAAAADs//f/AAAAAAAAAADs//j/AAAGAAEAAADs//n/AAAHAAEAAADs//r/AAAGAAEAAADs//v/AAACAAEAAADs//z/AAABAAEAAADs//3/AAACAAEAAADs//7/AAAHAAEAAADs////AAAAAAEAAADs/wAAAAADAAEAAADs/wEAAAAHAAEAAADs/wIAAAADAAEAAADs/wMAAAAEAAEAAADs/wQAAAAGAAEAAADs/wUAAAAGAAEAAADs/wYAAAAAAAEAAADs/wcAAAAHAAAAAADs/wgAAAAEAAAAAADs/wkAAAAEAAAAAADs/woAAAAFAAAAAADs/wsAAAAGAAAAAADt/wsAAAAGAAAAAADt/woAAAAFAAAAAADt/wkAAAAHAAAAAADt/wgAAAADAAAAAADt/wcAAAAEAAEAAADt/wYAAAAGAAEAAADt/wUAAAAAAAEAAADt/wQAAAACAAEAAADt/wMAAAABAAEAAADt/wIAAAAEAAEAAADt/wEAAAAHAAEAAADt/wAAAAAHAAEAAADt////AAABAAEAAADt//7/AAAAAAEAAADt//3/AAACAAEAAADt//z/AAADAAEAAADt//v/AAAEAAEAAADt//r/AAADAAEAAADt//n/AAAAAAEAAADt//j/AAAAAAEAAADt//f/AAACAAEAAADt//b/AAAAAAAAAADt//X/AAAAAAAAAADu//X/AAAAAAAAAADu//b/AAABAAAAAADu//f/AAABAAEAAADu//j/AAAHAAEAAADu//n/AAAAAAEAAADu//r/AAADAAEAAADu//v/AAAEAAEAAADu//z/AAAEAAEAAADu//3/AAAHAAEAAADu//7/AAAFAAEAAADu////AAAFAAEAAADu/wAAAAAAAAEAAADu/wEAAAAFAAEAAADu/wIAAAAGAAEAAADu/wMAAAADAAEAAADu/wQAAAACAAEAAADu/wUAAAAEAAEAAADu/wYAAAABAAEAAADu/wcAAAADAAEAAADu/wgAAAAGAAEAAADu/wkAAAAFAAAAAADu/woAAAAEAAAAAADu/wsAAAADAAAAAADv/wsAAAABAAAAAADv/woAAAABAAAAAADv/wkAAAAGAAAAAADv/wgAAAAAAAEAAADv/wcAAAAGAAEAAADv/wYAAAAFAAEAAADv/wUAAAABAAEAAADv/wQAAAAGAAEAAADv/wMAAAAEAAEAAADv/wIAAAAGAAEAAADv/wEAAAABAAEAAADv/wAAAAAHAAEAAADv////AAAAAAEAAADv//7/AAAGAAEAAADv//3/AAAAAAEAAADv//z/AAAEAAEAAADv//v/AAABAAEAAADv//r/AAAAAAEAAADv//n/AAACAAEAAADv//j/AAADAAEAAADv//f/AAAGAAEAAADv//b/AAACAAEAAADv//X/AAACAAAAAADw//X/AAAEAAAAAADw//b/AAAFAAEAAADw//f/AAAAAAEAAADw//j/AAAAAAEAAADw//n/AAACAAEAAADw//r/AAADAAEAAADw//v/AAACAAEAAADw//z/AAAFAAEAAADw//3/AAAHAAEAAADw//7/AAADAAEAAADw////AAAFAAEAAADw/wAAAAAHAAEAAADw/wEAAAAHAAEAAADw/wIAAAACAAEAAADw/wMAAAAGAAEAAADw/wQAAAAGAAEAAADw/wUAAAAHAAEAAADw/wYAAAAFAAEAAADw/wcAAAACAAEAAADw/wgAAAAAAAEAAADw/wkAAAACAAEAAADw/woAAAAEAAAAAADw/wsAAAAFAAAAAADx/wsAAAAEAAAAAADx/woAAAADAAEAAADx/wkAAAAEAAEAAADx/wgAAAADAAEAAADx/wcAAAAGAAEAAADx/wYAAAAAAAEAAADx/wUAAAADAAEAAADx/wQAAAACAAEAAADx/wMAAAAFAAEAAADx/wIAAAAEAAEAAADx/wEAAAADAAEAAADx/wAAAAABAAEAAADx////AAAEAAEAAADx//7/AAACAAEAAADx//3/AAAAAAEAAADx//z/AAABAAEAAADx//v/AAAFAAEAAADx//r/AAAGAAEAAADx//n/AAAHAAEAAADx//j/AAAGAAEAAADx//f/AAAAAAEAAADx//b/AAAGAAEAAADx//X/AAAAAAEAAADy/wQAAAAAAAEAAADy/wUAAAAHAAEAAADy/wYAAAAAAAEAAADy/wcAAAAFAAEAAADy/wgAAAAFAAEAAADy/wkAAAAEAAEAAADy/woAAAAEAAEAAADy/wsAAAABAAAAAADz/wsAAAAEAAEAAADz/woAAAAHAAEAAADz/wkAAAAEAAEAAADz/wgAAAAEAAEAAADz/wcAAAACAAEAAADz/wYAAAAFAAEAAADz/wUAAAAFAAEAAADz/wQAAAAHAAEAAADz/wMAAAACAAEAAADz/wIAAAAFAAEAAAD0/wQAAAABAAEAAAD0/wUAAAAGAAEAAAD0/wYAAAAGAAEAAAD0/wcAAAAHAAEAAAD0/wgAAAAGAAEAAAD0/wkAAAAHAAEAAAD0/woAAAADAAEAAAD0/wsAAAAAAAEAAAD1/wsAAAACAAEAAAD1/woAAAAEAAEAAAD1/wkAAAABAAEAAAD1/wgAAAACAAEAAAD1/wcAAAAGAAEAAAD1/wYAAAADAAEAAAD1/wUAAAAHAAEAAAD2/wcAAAABAAEAAAD2/wgAAAAHAAEAAAD2/wkAAAAEAAEAAAD2/woAAAACAAEAAAD2/wsAAAADAAEAAAD3/wsAAAABAAEAAAD3/woAAAAHAAEAAAD3/wkAAAADAAEAAAD3/wgAAAAFAAEAAAD4/wgAAAAEAAEAAAD4/wkAAAAAAAEAAAD4/woAAAAHAAEAAAD4/wsAAAACAAEAAAD5/wsAAAACAAEAAAD5/woAAAAAAAEAAAD6/wsAAAACAAEAAAD7/wsAAAABAAEAAADz//T/AAAHAAAAAADz//X/AAAFAAEAAADz//b/AAAHAAEAAADz//f/AAAAAAEAAADz//j/AAACAAEAAADz//n/AAACAAEAAADz//r/AAAHAAEAAADz//v/AAAGAAEAAADz//z/AAAAAAEAAADz//3/AAAAAAEAAADz//7/AAAHAAEAAAD0//v/AAACAAEAAAD0//r/AAAEAAEAAAD0//n/AAAEAAEAAAD0//j/AAADAAEAAAD0//f/AAAAAAEAAAD0//b/AAACAAEAAAD0//X/AAAAAAEAAAD0//T/AAACAAEAAAD1//T/AAAAAAEAAAD1//X/AAAAAAEAAAD1//b/AAAEAAEAAAD1//f/AAAHAAEAAAD1//j/AAAFAAEAAAD1//n/AAAHAAEAAAD2//j/AAAEAAEAAAD2//f/AAADAAEAAAD2//b/AAAAAAEAAAD2//X/AAAHAAEAAAD2//T/AAAGAAEAAAD3//T/AAACAAEAAAD3//X/AAAFAAEAAAD3//b/AAABAAEAAAD3//f/AAABAAEAAAD4//f/AAACAAEAAAD4//b/AAAEAAEAAAD4//X/AAAEAAEAAAD4//T/AAADAAEAAAD5//T/AAACAAEAAAD5//X/AAAEAAEAAAD5//b/AAAEAAEAAAD6//X/AAAEAAEAAAD6//T/AAAGAAEAAAD7//T/AAAHAAEAAAD7//X/AAAEAAEAAAD8//T/AAAEAAEAAAAEAPL/AAABAAMAAAAEAPH/AAACAAMAAAAFAPH/AAABAAMAAAAFAPD/AAADAAMAAAAGAPD/AAABAAMAAAAGAO//AAABAAMAAAAHAO//AAABAAMAAAAHAO7/AAAGAAMAAAAIAO7/AAACAAMAAAAIAO3/AAAEAAMAAAAJAO3/AAABAAMAAAAJAOz/AAAEAAMAAAAKAOz/AAAFAAMAAAAKAOv/AAAAAAMAAAAKAOr/AAAFAAMAAAALAOr/AAAFAAMAAAALAOn/AAAAAAMAAAALAOj/AAAFAAMAAAALAOf/AAACAAMAAAAKAOf/AAAFAAMAAAAKAOb/AAAGAAMAAAAKAOX/AAADAAMAAAAJAOX/AAAFAAMAAAAIAOX/AAAEAAMAAAAIAOT/AAAHAAMAAAAHAOT/AAADAAMAAAAGAOT/AAAHAAMAAAAGAOP/AAADAAMAAAAFAOP/AAAEAAMAAAAEAOP/AAADAAMAAAADAOP/AAAGAAMAAAACAOP/AAAEAAMAAAABAOP/AAAAAAMAAAAAAOP/AAAEAAMAAAD//+P/AAAFAAMAAAD+/+P/AAADAAMAAAD9/+P/AAAHAAMAAAD9/+T/AAACAAMAAAD8/+T/AAADAAMAAAD7/+T/AAAHAAMAAAD7/+X/AAADAAMAAAD6/+X/AAADAAMAAAD5/+b/AAADAAMAAAD5/+f/AAAAAAMAAAD4/+f/AAAEAAMAAAD4/+j/AAADAAMAAAD4/+n/AAACAAMAAAD3/+n/AAAAAAMAAAD3/+r/AAACAAMAAAD3/+v/AAAHAAMAAAD3/+z/AAAAAAMAAAD3/+3/AAACAAMAAAD3/+7/AAAFAAMAAAD3/+//AAAAAAMAAAD4/+//AAACAAMAAAD4//D/AAAHAAMAAAD5//D/AAADAAMAAAD5//H/AAACAAMAAAD6//H/AAABAAMAAAD7//H/AAAGAAMAAAD7//L/AAABAAMAAAD8//L/AAABAAMAAAAEAPD/AAAHAAMAAAAEAO//AAAHAAMAAAAFAO//AAABAAMAAAAFAO7/AAAGAAMAAAAGAO7/AAAAAAMAAAAGAO3/AAAFAAMAAAAHAO3/AAAGAAMAAAAHAOz/AAACAAMAAAAIAOz/AAAEAAMAAAAIAOv/AAAFAAMAAAAJAOv/AAACAAMAAAAJAOr/AAABAAMAAAAJAOn/AAAGAAMAAAAEAO7/AAAFAAMAAAAEAO3/AAAFAAMAAAAFAO3/AAAFAAMAAAAFAOz/AAAAAAMAAAAGAOz/AAABAAMAAAAGAOv/AAAFAAMAAAAHAOv/AAAGAAMAAAAIAOr/AAAAAAMAAAAKAOn/AAAGAAMAAAAKAOj/AAABAAMAAAAJAOf/AAAEAAMAAAAJAOb/AAAHAAMAAAAIAOb/AAAEAAMAAAAHAOX/AAADAAMAAAAGAOX/AAAAAAMAAAAFAOX/AAAAAAMAAAAEAOX/AAAFAAMAAAAEAOT/AAAAAAMAAAADAOT/AAABAAMAAAACAOT/AAACAAMAAAABAOT/AAADAAMAAAAAAOT/AAAEAAMAAAAAAOX/AAAFAAMAAAD//+X/AAAHAAMAAAD+/+X/AAAFAAMAAAD9/+b/AAAEAAMAAAD8/+b/AAAAAAMAAAD7/+f/AAACAAMAAAD6/+f/AAABAAMAAAD6/+j/AAAEAAMAAAD6/+n/AAAEAAMAAAD5/+n/AAAHAAMAAAD5/+r/AAACAAMAAAD5/+v/AAABAAMAAAD5/+z/AAAEAAMAAAD5/+3/AAAFAAMAAAD6/+3/AAAHAAMAAAD6/+7/AAAFAAMAAAD7/+7/AAAEAAMAAAD8/+7/AAACAAMAAAD8/+//AAAAAAMAAAD8/+3/AAAHAAMAAAD7/+3/AAAFAAMAAAD7/+z/AAAAAAMAAAD7/+v/AAABAAMAAAD8/+v/AAAGAAMAAAD8/+r/AAADAAMAAAD8/+n/AAAFAAMAAAD9/+n/AAAAAAMAAAD9/+j/AAABAAMAAAD+/+j/AAAGAAMAAAD+/+f/AAADAAMAAAD//+f/AAABAAMAAAAAAOf/AAADAAMAAAABAOf/AAAEAAMAAAACAOf/AAAEAAMAAAADAOf/AAAEAAMAAAADAOj/AAABAAMAAAAEAOj/AAAHAAMAAAAEAOn/AAACAAMAAAAEAOr/AAAHAAMAAAAFAOr/AAADAAMAAAAFAOv/AAAGAAMAAAAGAOr/AAAHAAMAAAAHAOr/AAAEAAMAAAAHAOn/AAACAAMAAAAIAOn/AAAAAAMAAAAJAOj/AAADAAMAAAAGAOn/AAAFAAMAAAAHAOj/AAADAAMAAAAIAOj/AAACAAMAAAAIAOf/AAAEAAMAAAAGAOj/AAAHAAMAAAAFAOn/AAABAAMAAAAFAOj/AAABAAMAAAAGAOf/AAAGAAMAAAAHAOf/AAAAAAMAAAAHAOb/AAABAAMAAAAGAOb/AAACAAMAAAAFAOb/AAADAAMAAAAEAOb/AAAHAAMAAAADAOb/AAAEAAMAAAACAOb/AAACAAMAAAABAOb/AAADAAMAAAAAAOb/AAAHAAMAAAD//+b/AAAEAAMAAAD+/+b/AAAHAAMAAAD9/+f/AAAEAAMAAAAEAOf/AAAFAAMAAAAFAOf/AAAGAAMAAAADAOX/AAAGAAMAAAACAOX/AAAFAAMAAAABAOX/AAABAAMAAAAFAOT/AAAAAAMAAAD//+T/AAAHAAMAAAD+/+T/AAACAAMAAAD9/+X/AAABAAMAAAD8/+X/AAACAAMAAAD7/+b/AAAGAAMAAAD6/+b/AAABAAMAAAD5/+j/AAADAAMAAAD8/+f/AAAHAAMAAAD8/+j/AAAGAAMAAAD7/+j/AAAGAAMAAAD7/+n/AAACAAMAAAD6/+r/AAADAAMAAAD6/+v/AAAFAAMAAAD4/+z/AAAHAAMAAAD4/+3/AAADAAMAAAD4/+v/AAABAAMAAAD4/+r/AAAGAAMAAAD5/+7/AAAFAAMAAAD5/+//AAAEAAMAAAD6/+//AAABAAMAAAD7//D/AAAFAAMAAAD8//D/AAAHAAMAAAD8//H/AAAGAAMAAAD7/+//AAACAAMAAAD4/+7/AAAEAAMAAAD6//D/AAACAAMAAAD6/+z/AAADAAMAAAD7/+r/AAADAAMAAAD8/+z/AAAAAAMAAAD9/+3/AAAFAAMAAAD+/+3/AAAGAAMAAAD9/+z/AAAHAAMAAAD9/+v/AAAHAAMAAAD9/+r/AAAGAAMAAAD+/+r/AAAGAAMAAAD+/+n/AAAHAAMAAAD//+n/AAAHAAMAAAD//+j/AAAHAAMAAAAAAOj/AAAHAAMAAAABAOj/AAAHAAMAAAACAOj/AAAHAAMAAAACAOn/AAAHAAMAAAADAOn/AAAGAAMAAAADAOr/AAAGAAMAAAAEAOv/AAAGAAMAAAAEAOz/AAAGAAMAAAADAOz/AAAGAAMAAAACAOz/AAAHAAMAAAACAO3/AAAHAAMAAAABAO3/AAAGAAMAAAAAAO3/AAAHAAMAAAADAO3/AAAHAAMAAAADAOv/AAAHAAMAAAACAOr/AAAGAAMAAAABAOr/AAAHAAMAAAABAOn/AAAHAAMAAAAAAOn/AAAHAAMAAAD//+r/AAAHAAMAAAD+/+v/AAAHAAMAAAD+/+z/AAAGAAMAAAD//+z/AAAGAAMAAAAAAOz/AAAHAAMAAAABAOz/AAAHAAMAAAABAOv/AAAHAAMAAAAAAOr/AAAGAAMAAAD//+v/AAAGAAMAAAD//+3/AAAHAAMAAAAAAOv/AAAHAAMAAAACAOv/AAAHAAMAAAA=")
tile_set = SubResource("TileSet_f2txt")

[node name="Player" parent="." unique_id=743513567 instance=ExtResource("3_0b4ue")]
position = Vector2(40, 24)

[node name="Checkpoint" parent="." unique_id=2090551216 instance=ExtResource("4_0b4ue")]
position = Vector2(24, 24)

[node name="TideTimer" type="Timer" parent="." unique_id=1438488177]
autostart = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=721818192]
visible = false
position = Vector2(184, 103.5)
zoom = Vector2(3.13, 3.13)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AreaCamera" type="Area2D" parent="Camera2D" unique_id=193271000]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/AreaCamera" unique_id=476086806]
shape = SubResource("RectangleShape2D_0b4ue")

[node name="Block" parent="." unique_id=1012717656 instance=ExtResource("5_f2txt")]
position = Vector2(40, 40)

[connection signal="moving" from="Player" to="." method="_on_player_moving"]
[connection signal="timeout" from="TideTimer" to="." method="_on_tide_timer_timeout"]
[connection signal="area_exited" from="Camera2D/AreaCamera" to="." method="_on_area_camera_area_exited"]

[editable path="Player"]
[editable path="Checkpoint"]
[editable path="Block"]
